--- a/om/src/main/resources/application.properties
+++ b/om/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 server.port=8082
 
 #Local Sunucu Bilgileri
@@ -10,7 +9,7 @@ spring.datasource.password=root
 
 #Ekstra
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.data.jpa.repositories.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name= org.postgresql.Driver
